# Machine-Learning

./: .gitignore  LICENSE  README.md  pyproject.toml
projects/course-labs/: pyproject.toml
projects/course-labs/src/course_labs/: evaluation_graphs.py  linear_regression.py
projects/linear-regression/medical-insurance-prediction/: README.md  pyproject.toml
projects/linear-regression/medical-insurance-prediction/src/medical_insurance_prediction/: __init__.py  medical_insurance.ipynb
projects/linear-regression/student-performance/: README.md  pyproject.toml
projects/linear-regression/student-performance/src/student_performance/: manual_regression.ipynb  student_perf_sklearn.ipynb
src/machine_learning/: __init__.py
