[project]
name = "course-labs"
version = "0.1.0"
description = "Generic Methods use across datasets"
readme = "README.md"
authors = [
    { name = "Smruti Mohanty", email = "2spmohanty@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
