[project]
name = "medical-insurance-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Smruti", email = "2spmohanty@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["course-labs"]

[tool.uv.sources]
course_labs = { workspace = true }